--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="stylesheet/style.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
 
     <title>Hello</title>
